[package]
name = "shuttle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
eframe = "0.21.3"
egui = "0.21.0"
env_logger = "0.10.0"
fuzzy-matcher = "0.3.7"
itertools = "0.10.5"
rayon = "1.6.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
thiserror = "1.0.38"
ureq = { version = "2.6.2", features = ["json"] }
